# BikeSharing_Project

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
Preliminary_investigation/: Distance_to_bikelanes.py
data/: Donosti_SS_preprocessing.ipynb  buildings-small.gpkg  city_map.ipynb  probar.py
data/FullSS_noSquare/boundary/: boundary_SS.dbf  boundary_SS.geojson  boundary_SS.shp  boundary_SS.shx
data/FullSS_noSquare/roads/: Visualize_roads.py
data/FullSS_noSquare/roads/ss_bike.shp/: edges.shp  edges.shx  nodes.dbf  nodes.shp  nodes.shx
data/FullSS_noSquare/roads/ss_drive.shp/: edges.dbf  edges.shp  edges.shx  nodes.dbf  (+3 more)
data/Rides/: ESTACIONES DBIZI COORDENADAS.xlsx  Stations_new.csv  day_viz_rides.csv  estaciones.csv  one_day.csv  postal2022.XLSX  postal_2021.xlsx  ride_demand_ss_1_week_scattered_small.csv  ride_ss_destination.csv  ride_ss_origin.csv  rides_ss_top10density.csv  rides_ss_top10density_small.csv  stations_ed.csv  stations_hexcell.csv
data/boundary/: SquareBoundarySS.dbf  SquareBoundarySS.geojson  SquareBoundarySS.shp  SquareBoundarySS.shx  small_boundary.dbf  small_boundary.geojson  small_boundary.shp  small_boundary.shx
data/roads/ss_bike.shp/: edges.shp
data/roads/ss_bike_small.shp/: edges.shx  nodes.dbf  nodes.shp  nodes.shx
data/roads/ss_drive.shp/: edges.dbf  edges.shp  edges.shx  nodes.dbf  nodes.shp  nodes.shx
data/roads/ss_drive_small.shp/: edges.dbf  edges.shp  edges.shx  nodes.dbf  nodes.shp  nodes.shx
data/roads/ss_walk.shp/: edges.shx  nodes.dbf  nodes.shp  nodes.shx
data/roads/ss_walk_small.shp/: edges.shp
