[project]
name = "bikesharing-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "osmnx>=2.0.6",
    "pyproj>=3.7.2",
    "shapely>=2.1.1",
]

[dependency-groups]
dev = [
    "contextily>=1.6.2",
    "pre-commit>=4.3.0",
    "ruff>=0.13.0",
]
